:bug: fix: horizontal scroll code editor when adding a new script

--- a/src/components/NewScript/style.css
+++ b/src/components/NewScript/style.css
@@ -1,9 +1,10 @@
 @import "../../../node_modules/codemirror/lib/codemirror.css";
 
 .code-editor{
-    position: relative;
+    position: absolute;
     margin-top: 28px;
     height: 85vh;
+    width: 75vw;
     border: 1px solid black;
     background-color: white;
 }
